--- a/catalog.html
+++ b/catalog.html
@@ -4,28 +4,28 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 
-<body>
+<body class="index-body">
   <!-- Шапка -->
   <header class="header">
-    <nav class="main-navigation centr" aria-label="Навигация на странице">
+    <nav class="main-navigation centr">
       <!-- Лого -->
-      <a class="logo" href="index.html"><svg width="160" height="65">
+      <a class="logo" href="index.html"><svg width="160" height="65" aria-label="Логотип сайта Нёрдс">
           <path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1 18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3 3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10 1 9 8l-1 2-1 3z" />
           <path d="M113 26a87 87 0 0 0-1 8c-1 10-1 19 1 23 0 2 3 5 6 2 3-4 6-2 2 2-2 2-7 4-11 4-3-1-5-3-6-6l-2 2c-2 3-4 4-8 3-6 0-10-7-8-18s11-14 16-12l1-4v-1a97 97 0 0 1-5 1c-24 4-16-15-10-20 7-6 7-2 5-1-3 3-5 16 5 16h5c4-19 14-27 22-24 9 3 8 17-12 25zm-11 25V39v-2c-3-1-6 4-7 11-1 9 2 13 5 11l2-8zm24-44c-1-2-8 1-12 15 10-5 14-13 12-15z" /></svg></a>
       <!-- Меню Сайта-->
       <ul class="site-navigation reset-ul">
         <li><a  href="#" aria-label="Перейти в раздел: Студия">Студия</a></li>
         <li><a  href="#" aria-label="Перейти в раздел: Клиенты">Клиенты</a></li>
-        <li><a class="menu-active" href="#" aria-label="Перейти в раздел: Магазин">Магазин</a></li>
+        <li><a class="menu-active" href="#" aria-label="Выбранный раздел: Магазин">Магазин</a></li>
         <li><a  href="#" aria-label="Перейти в раздел: Контакты">Контакты</a></li>
       </ul>
       <!-- Меню Пользователя-->
       <ul class="user-navigation reset-ul">
         <li class="basket">
-          <a href="#" aria-label="Корзина">
+          <a href="#" aria-label="Перейти в Корзина">
             <svg class="svg" width="15" height="15">
               <circle fill="#a6a6a6" cx="5" cy="14" r="2" />
               <circle fill="#a6a6a6" cx="13" cy="14" r="2" />
@@ -53,14 +53,14 @@
               <div class="range-wrap">
                 <div class="range-content">
                   <span class="range-line"></span>
-                  <button class="range-button" aria-label="Фильтр товаров Кнопка Увеличить количество"></button>
-                  <button class="range-button" aria-label="Фильтр товаров Кнопка Уменьшить количество"></button>
+                  <button class="range-button" aria-label="Фильтр товаров Ценовой диапазон"></button>
+                  <button class="range-button" aria-label="Фильтр товаров Ценовой диапазон"></button>
                 </div>
               </div>
               <!-- Нижняя часть -->
               <div class="range-cost">
-                <label aria-label="Окно для количества От">ОТ<input type="number" placeholder="0"></label>
-                <label aria-label="Окно для количества До">до<input type="number" placeholder="15000"></label>
+                <label aria-label="Окно для количества От">ОТ<input type="number" id="inp" placeholder="0" min="0" max="5"></label>
+                <label aria-label="Окно для количества До">до<input type="number" placeholder="15000" min="0" max="5"></label>
               </div>
             </div>
           </fieldset>
@@ -149,9 +149,9 @@
         <ul class="projects-list reset-ul">
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" width="360" height="576" alt="Информационный сайт
+            <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
+            <img src="img/img-sedona.jpg.png" width="360" height="576" alt="Информационный сайт
             для туристов">
-            <img src="img/img-sedona.jpg.png" alt="">
             <div class="project-wrap">
               <h3 class="reset-h">Sedona</h3>
               <p class="reset-p">Информационный сайт
@@ -161,9 +161,9 @@
           </li>
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" width="360" height="576" alt="Продуктовый лендинг
+            <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
+            <img src="img/img-pink.jpg.png" width="360" height="576" alt="Продуктовый лендинг
             приложения для iOS и Android">
-            <img src="img/img-pink.jpg.png" alt="">
             <div class="project-wrap">
               <h3 class="reset-h">Pink App</h3>
               <p class="reset-p">Продуктовый лендинг
@@ -173,7 +173,7 @@
           </li>
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" alt="">
+            <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
             <img src="img/img-barbershop.jpg.png" width="360" height="576" alt="Сайт салона красоты.
             Для мужчин">
             <div class="project-wrap">
@@ -185,7 +185,7 @@
           </li>
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" alt="">
+            <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
             <img src="img/img-mishka.jpg.png" width="360" height="576" alt="Интернет-магазин
             вязаных игрушек">
             <div class="project-wrap">
@@ -197,7 +197,7 @@
           </li>
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" alt="">
+            <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
             <img src="img/img-aplus.jpg.png" width="360" height="576" alt="Лендинг курсов повышения квалификации">
             <div class="project-wrap">
               <h3 class="reset-h">A Plus</h3>
@@ -207,9 +207,9 @@
           </li>
           <!-- Проект -->
           <li class="project">
-            <img src="img/browser.png" width="360" height="576" alt="Промо-сайт производителя
+            <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
+            <img src="img/img-kvast.jpg.png" width="360" height="576" alt="Промо-сайт производителя
             крафтового кваса">
-            <img src="img/img-kvast.jpg.png" alt="КВАСТ">
             <div class="project-wrap">
               <h3 class="reset-h">КВАСТ</h3>
               <p class="reset-p">Промо-сайт производителя
@@ -239,9 +239,9 @@
 				<p class="reset-p">
 					191186, Санкт-Петербург,
 					ул. Б. Конюшенная, д. 19/8 
-					<span>тел. <a class="phone" href="tel:+7(812)275-75-75">+7 (812) 275-75-75</a></span>
+					<span>тел. <a class="phone" href="tel:+7(812)275-75-75" aria-label="Наш номер телефона +7(812)275-75-75">+7 (812) 275-75-75</a></span>
 				</p>
-				<a href="#" class="btn call-modal">Написать нам</a>
+				<a href="#" class="btn call-modal" aria-label="Кнопка Напишите нам">Напишите нам</a>
 	
 	<!-- Обертка -->
   <div class="overlay">
@@ -249,7 +249,7 @@
     <div class="modal">
 			<!-- Верхняя часть - Шапка -->
       <div class="modal__header">
-        <h2 class="modal__head">Напишите нам</h2>
+        <h2 class="modal__head">Напиcать нам</h2>
         <button class="modal__exit">&times;</button>
 			</div>
 			<!-- Форма -->
@@ -287,16 +287,16 @@
   <!-- Подвал -->
 	<footer class="footer centr">
 		<ul class="social reset-ul">
-			<li><a class="social-icon" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Вконтакте"></a></li>
-			<li><a class="social-icon" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
-			<li><a class="social-icon" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
-		</ul>
+      <li><a class="social-icon" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Вконтакте" aria-label="Мы Вконтакте"></a></li>
+      <li><a class="social-icon" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук" aria-label="Мы в Фейсбуке"></a></li>
+      <li><a class="social-icon" href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм" aria-label="Мы в Инстаграм"></a></li>
+  </ul>
 		<p><b>Давайте дружить, это выгодно!</b>Скидка 10% для друзей из социальных сетей.</p>
 	</footer>
   
   <!-- Скрипты -->
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="js/script.js"></script>
+  <script src="js/script-min.js"></script>
 </body>
 
 </html>
