--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
-  <link rel="stylesheet" href="css/style-min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="index-body">
   <!-- Шапка -->
   <header class="header">
-    <nav class="main-navigation centr">
+    <nav class="main-navigation container">
       <!-- Лого -->
       <a class="logo" href="index.html"><svg width="160" height="65" aria-label="Логотип сайта Нёрдс">
           <path d="M158 49l-4 1c-2 17-26 20-27 6 0-6 12-8 24-9 0-11-16 6-22-4-5-9 15-18 17-16 6 5 3 6-1 8-10 3-6 4-5 4 8-3 14-1 14 8h4c2 0 3 2 0 2zm-8 1c-9 1-17 3-16 5 2 6 14 7 16-5zm-32-5V33c1-7 12-3 9-2-3 2-5 9-6 12-1 2-3 2-3 2zM42 21c2 5-5 8-8 5-2-2-1-5 2-7 2-1 5-1 6 2zm15-2c3 5-5 9-9 5-1-2-1-5 3-7 2-1 4-2 6 2zM29 62c-8 5-14 4-12-11 1-11-1-12-3-10-3 3-5 10-5 17a51 51 0 0 0 1 5c0 1-5 3-8 1-1-1-2-9-2-20 0-9 1-15 2-15 8-2 10 1 8 8a48 48 0 0 0-2 8c2-5 4-9 7-10 8-5 14-3 13 6-2 17-3 19-1 18 2-2 4 1 2 3zm26-2c-2 3-8 5-13 4-8-1-13-8-11-18 2-11 18-18 23-10 4 5-2 16-11 19l-1 1c2 5 7 7 11 2 2-2 4-1 2 2zm-14-8c6-4 8-13 7-16-2-2-6 2-7 12v4zm42-7l-6 5c-2 1-5 0-5-3 0-1 1-3 4-4-1-2-2-3-3-2-3 3-7 12-6 19v1l1 2c0 1-5 3-8 0-1 0-2-6-2-17 0-9 2-17 3-17 6-2 10 1 8 7l-3 11c3-7 7-13 10-15 6-3 10 1 9 8l-1 2-1 3z" />
@@ -35,14 +35,14 @@
         </li>
       </ul>
     </nav>
-    <h1 class="header-head reset-h centr">Магазин готовых шаблонов</h1>
+    <h1 class="header-head reset-h container">Магазин готовых шаблонов</h1>
   </header>
   <main>
-    <section class="container-catalog centr">
+    <section class="container-catalog container">
       <!-- Левая часть Каталога -->
       <div class="filters">
         <!-- Форма -->
-        <form action="#" class="filters-form">
+        <form action="https://echo.htmlacademy.ru/" class="filters-form">
           <!-- Логическая обертка -->
           <fieldset class="filters-form__price">
             <!-- Заголовок  -->
@@ -59,8 +59,8 @@
               </div>
               <!-- Нижняя часть -->
               <div class="range-cost">
-                <label aria-label="Окно для количества От">ОТ<input type="number" id="inp" placeholder="0" min="0" max="5"></label>
-                <label aria-label="Окно для количества До">до<input type="number" placeholder="15000" min="0" max="5"></label>
+                <label class="label" aria-label="Окно для количества От">ОТ<input type="number" id="inp" placeholder="0" min="0" max="5"></label>
+                <label class="label" aria-label="Окно для количества До">до<input type="number" placeholder="15000" min="0" max="5"></label>
               </div>
             </div>
           </fieldset>
@@ -70,20 +70,20 @@
             <!-- Заголовок  -->
             <legend>Сетка:</legend>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Тип сетки Адаптивная ">
-              <input class="input visually-hidden" type="radio" name="grid" checked>
+            <label class="label" aria-label="Тип сетки Адаптивная ">
+              <input class="input visually-hidden" value="responsive" type="radio" name="grid" checked>
               <span class="radio"></span>
               Адаптивная
             </label>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Тип сетки Фиксированная">
-              <input class="input visually-hidden" type="radio" name="grid">
+            <label class="label label_disabled" aria-label="Тип сетки Фиксированная">
+              <input class="input visually-hidden" value="fix" type="radio" name="grid" disabled>
               <span class="radio"></span>
               Фиксированная
             </label>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Тип сетки Резиновая">
-              <input class="input visually-hidden" type="radio" name="grid">
+            <label class="label" aria-label="Тип сетки Резиновая">
+              <input class="input visually-hidden" value="rubber" type="radio" name="grid">
               <span class="radio"></span>
               Резиновая
             </label>
@@ -94,32 +94,32 @@
             <!-- Заголовок  -->
             <legend>ОСОБЕННОСТИ:</legend>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Добавить в наполнение: Слайдер">
-              <input class="input visually-hidden" type="checkbox" checked>
+            <label class="label" aria-label="Добавить в наполнение: Слайдер">
+              <input class="input visually-hidden" type="checkbox" name="slider" checked>
               <span class="checkbox"></span>
               Слайдер
             </label>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Добавить в наполнение: Блок преимуществ">
-              <input class="input visually-hidden" type="checkbox">
+            <label class="label" aria-label="Добавить в наполнение: Блок преимуществ">
+              <input class="input visually-hidden" type="checkbox" name="advantages" >
               <span class="checkbox"></span>
               Блок преимуществ
             </label>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Добавить в наполнение: Новости">
-              <input class="input visually-hidden" type="checkbox" checked>
+            <label class="label" aria-label="Добавить в наполнение: Новости">
+              <input class="input visually-hidden" type="checkbox" name="news" checked>
               <span class="checkbox"></span>
               Новости
             </label>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Добавить в наполнение: Галерея">
-              <input class="input visually-hidden" type="checkbox">
+            <label class="label label_disabled" aria-label="Добавить в наполнение: Галерея">
+              <input class="input visually-hidden" type="checkbox" name="galery" disabled>
               <span class="checkbox"></span>
               Галерея
             </label>
             <!-- Поле формы обернутые внутрь лейбла -->
-            <label aria-label="Добавить в наполнение: Корзина">
-              <input class="input visually-hidden" type="checkbox">
+            <label class="label" aria-label="Добавить в наполнение: Корзина">
+              <input class="input visually-hidden" type="checkbox" name="basket">
               <span class="checkbox"></span>
               Корзина
             </label>
@@ -141,8 +141,8 @@
             <li><a href="№">По названию</a></li>
           </ul>
           <ul class="sort-dir reset-ul">
-            <li><a class="sort-active" href="">&#9660;</a></li>
-            <li><a href="">&#9650;</a></li>
+            <li><a class="sort-active" href="#" aria-label="Стрелка Вниз">&#9660;</a></li>
+            <li><a href="#" aria-label="Стрелка Вверх">&#9650;</a></li>
           </ul>
         </div>
         <!-- Список проектов -->
@@ -150,10 +150,10 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
-            <img src="img/img-sedona.jpg.png" width="360" height="576" alt="Информационный сайт
+            <img src="img/img-sedona.jpg" width="360" height="576" alt="Информационный сайт
             для туристов">
             <div class="project-wrap">
-              <h3 class="reset-h">Sedona</h3>
+              <h3 class="reset-h"><a href="#" class="project-link">Sedona</a></h3>
               <p class="reset-p">Информационный сайт
                 для туристов</p>
               <a href="#" class="btn">9 900 руб.</a>
@@ -162,10 +162,10 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
-            <img src="img/img-pink.jpg.png" width="360" height="576" alt="Продуктовый лендинг
+            <img src="img/img-pink.jpg" width="360" height="576" alt="Продуктовый лендинг
             приложения для iOS и Android">
             <div class="project-wrap">
-              <h3 class="reset-h">Pink App</h3>
+              <h3 class="reset-h"><a href="#" class="project-link">Pink App</a></h3>
               <p class="reset-p">Продуктовый лендинг
                 приложения для iOS и Android</p>
               <a href="#" class="btn">9 900 руб.</a>
@@ -174,10 +174,10 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
-            <img src="img/img-barbershop.jpg.png" width="360" height="576" alt="Сайт салона красоты.
+            <img src="img/img-barbershop.jpg" width="360" height="576" alt="Сайт салона красоты.
             Для мужчин">
             <div class="project-wrap">
-              <h3 class="reset-h">Barbershop</h3>
+              <h3 class="reset-h"><a href="#" class="project-link">Barbershop</a></h3>
               <p class="reset-p">Сайт салона красоты.
                 Для мужчин, да.</p>
               <a href="#" class="btn">9 900 руб.</a>
@@ -186,10 +186,10 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
-            <img src="img/img-mishka.jpg.png" width="360" height="576" alt="Интернет-магазин
+            <img src="img/img-mishka.jpg" width="360" height="576" alt="Интернет-магазин
             вязаных игрушек">
             <div class="project-wrap">
-              <h3 class="reset-h">MISHKA</h3>
+              <h3 class="reset-h"><a href="#" class="project-link">MISHKA</a></h3>
               <p class="reset-p">Интернет-магазин
                 вязаных игрушек</p>
               <a href="#" class="btn">9 900 руб.</a>
@@ -198,9 +198,9 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
-            <img src="img/img-aplus.jpg.png" width="360" height="576" alt="Лендинг курсов повышения квалификации">
+            <img src="img/img-aplus.jpg" width="360" height="576" alt="Лендинг курсов повышения квалификации">
             <div class="project-wrap">
-              <h3 class="reset-h">A Plus</h3>
+              <h3 class="reset-h"><a href="#" class="project-link">A Plus</a></h3>
               <p class="reset-p">Лендинг курсов повышения квалификации</p>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
@@ -208,10 +208,10 @@
           <!-- Проект -->
           <li class="project">
             <img src="img/browser.png" width="360" height="40" alt="Шапка изображения">
-            <img src="img/img-kvast.jpg.png" width="360" height="576" alt="Промо-сайт производителя
+            <img src="img/img-kvast.jpg" width="360" height="576" alt="Промо-сайт производителя
             крафтового кваса">
             <div class="project-wrap">
-              <h3 class="reset-h">КВАСТ</h3>
+              <h3 class="reset-h"><a href="#" class="project-link">КВАСТ</a></h3>
               <p class="reset-p">Промо-сайт производителя
                 крафтового кваса</p>
               <a href="#" class="btn">9 900 руб.</a>
@@ -233,7 +233,7 @@
 	<section class="contact">
     <h2 class="visually-hidden">Контакты</h2>
 		<!-- Обертка -->
-		<div class="centr contact-container">
+		<div class="container contact-container">
 			<article class="contact-block">
 				<h3 class="reset-h">NЁRDS DESIGN STUDIO</h3>
 				<p class="reset-p">
@@ -241,7 +241,7 @@
 					ул. Б. Конюшенная, д. 19/8 
 					<span>тел. <a class="phone" href="tel:+7(812)275-75-75" aria-label="Наш номер телефона +7(812)275-75-75">+7 (812) 275-75-75</a></span>
 				</p>
-				<a href="#" class="btn call-modal" aria-label="Кнопка Напишите нам">Напишите нам</a>
+				<a href="form.html" class="btn call-modal" aria-label="Кнопка Напишите нам">Напишите нам</a>
 	
 	<!-- Обертка -->
   <div class="overlay">
@@ -279,13 +279,13 @@
 		</div>
 		<!-- Карта -->
 		<div class="map" id="map">
-
+        <img src="img/map.png" alt="" class="map-image">
 		</div>
 	</section>
   </main>
 
   <!-- Подвал -->
-	<footer class="footer centr">
+	<footer class="footer container">
 		<ul class="social reset-ul">
       <li><a class="social-icon" href="#"><img src="img/vk-icon.png" width="26" height="15" alt="Вконтакте" aria-label="Мы Вконтакте"></a></li>
       <li><a class="social-icon" href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук" aria-label="Мы в Фейсбуке"></a></li>
@@ -296,7 +296,7 @@
   
   <!-- Скрипты -->
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="js/script-min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
